# eve-market-analyzer

./: LICENSE  README.md  main.py  pyproject.toml
src/: config.py
src/domain/: calculator.py  models.py
src/infrastructure/: esi_client.py  static_data.py
src/ui/: main.py
